--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.4.3)
 if (DEFINED ENV{LLVM_DIR})
     # We need to match the build environment for LLVM:
     # In particular, we need C++11 and the -fno-rtti flag
-    # set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 11)
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
 	set(CMAKE_CXX_FLAGS "-O0 -fno-rtti")
 else()
