add svf static lib

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,7 +1,8 @@
 llvm_map_components_to_libnames(llvm_libs bitwriter core ipo irreader instcombine instrumentation target linker analysis scalaropts support )
 add_executable( wpa wpa.cpp )
 
-target_link_libraries( wpa LLVMSvf LLVMCudd ${llvm_libs} )
+set(LLVMCudd "$ENV{LLVM_CUDD}")
+target_link_libraries( wpa ${SVF_LIB} ${LLVMCudd} ${llvm_libs})
 
 set_target_properties( wpa PROPERTIES
                        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
