change wpa to svf-ex

--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -1,8 +1,8 @@
 llvm_map_components_to_libnames(llvm_libs bitwriter core ipo irreader instcombine instrumentation target linker analysis scalaropts support )
-add_executable( wpa wpa.cpp )
+add_executable(svf-ex svf-ex.cpp)
 
 set(LLVMCudd "$ENV{LLVM_CUDD}")
-target_link_libraries( wpa ${SVF_LIB} ${LLVMCudd} ${llvm_libs})
+target_link_libraries(svf-ex ${SVF_LIB} ${LLVMCudd} ${llvm_libs})
 
-set_target_properties( wpa PROPERTIES
+set_target_properties( svf-ex PROPERTIES
                        RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin )
