--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,9 +29,17 @@ Please set this to environment variable to point to the LLVM build directory\
 (e.g. on linux: export LLVM_DIR=/path/to/llvm/build/dir)")
 endif()
 
+if (UNIX AND NOT APPLE)
+    MESSAGE (STATUS "this is linux")
+    set(SVF_LIB "${SVF_DIR}/libsvf_static_lib.a")
+    set(LLVMCudd "${SVF_DIR}/libCudd.a")
+elseif (APPLE)
+    MESSAGE (STATUS "this is MAC")
+    set(SVF_LIB "${SVF_DIR}/libSVFmac.a")
+    set(LLVMCudd "${SVF_DIR}/libCuddmac.a")
+endif()
 set(SVF_HEADER "${SVF_DIR}/include")
-set(SVF_LIB "${SVF_DIR}/libsvf_static_lib.a")
-set(LLVMCudd "${SVF_DIR}/libCudd.a")
+
 if (EXISTS "${SVF_HEADER}" AND EXISTS "${SVF_LIB}")
     message(STATUS "SVF_HEADER: ${SVF_HEADER}")
     message(STATUS "SVF_LIB: ${SVF_LIB}")
