--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,7 @@ matrix:
         - tar -xzvf V1.0.1.tar.gz
         - export SVF=$PWD/SVF-Static-Lib
         - wget https://github.com/llvm/llvm-project/releases/download/llvmorg-10.0.0/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04.tar.xz
-        - xz -d clang*.tar.xz
-        - tar -xvf clang*.tar
+        - tar -xvf clang*.tar.xz
         - export LLVM_DIR=$PWD/clang+llvm-10.0.0-x86_64-linux-gnu-ubuntu-18.04
     - os: osx
       osx_image: xcode11.5
