--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,12 +31,12 @@ endif()
 
 if (UNIX AND NOT APPLE)
     MESSAGE (STATUS "this is linux")
-    set(SVF_LIB "${SVF_DIR}/libsvf_static_lib.a")
-    set(LLVMCudd "${SVF_DIR}/libCudd.a")
+    set(SVF_LIB "${SVF_DIR}/libsvf_ubuntu.a")
+    set(LLVMCudd "${SVF_DIR}/libCudd_ubuntu.a")
 elseif (APPLE)
     MESSAGE (STATUS "this is MAC")
-    set(SVF_LIB "${SVF_DIR}/libSVFmac.a")
-    set(LLVMCudd "${SVF_DIR}/libCuddmac.a")
+    set(SVF_LIB "${SVF_DIR}/libsvf_mac.a")
+    set(LLVMCudd "${SVF_DIR}/libCudd_mac.a")
 endif()
 set(SVF_HEADER "${SVF_DIR}/include")
 
