--- a/.travis.yml
+++ b/.travis.yml
@@ -13,12 +13,13 @@ matrix:
       osx_image: xcode11.5
       install:
        - npm install svf-lib
-       - export SVF_DIR=$PWD/node_modules/SVF
+       - export SVF_DIR=$PWD/node_modules/SVF/SVF-$TRAVIS_OS_NAME
 
 before_script:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get update       ; fi
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install cmake gcc g++; fi
 
 script:
+  - export LLVM_DIR=$PWD/node_modules/SVF/llvm-10.0.0.obj
   - cmake -DSVF_DIR=$SVF_DIR
   - make
