--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,15 @@ WARNING: The LLVM_DIR var was not set (required for an out-of-source build)!\n\
 Please set this to environment variable to point to the LLVM build directory\
 (e.g. on linux: export LLVM_DIR=/path/to/llvm/build/dir)")
 endif()
+
+if (EXISTS "${SVF_DIR}")
+else()
+    message(FATAL_ERROR "\
+WARNING: The SVF_DIR var was not set (required for an out-of-source build)!\n\
+Please set this to environment variable to point to the SVF_DIR directory or set this variable to cmake configuration\n
+(e.g. on linux: export SVF_DIR=/path/to/SVF/dir) \n or \n \n(make the project via: cmake -DSVF_DIR=your_path_to_SVF) ")
+endif()
+
 if (UNIX AND NOT APPLE)
     MESSAGE (STATUS "building SVF on Ubuntu")
     set(SVF_LIB "${SVF_DIR}/Release-build/lib/libSvf.a")
@@ -37,14 +46,7 @@ elseif (APPLE)
     set(LLVMCudd "${SVF_DIR}/Release-build/lib/CUDD/libCudd.a")
 endif()
 set(SVF_HEADER "${SVF_DIR}/include")
-
-if (EXISTS "${SVF_HEADER}" AND EXISTS "${SVF_LIB}")
-    message(STATUS "SVF_HEADER: ${SVF_HEADER}")
-    message(STATUS "SVF_LIB: ${SVF_LIB}")
-else()
-    message(FATAL_ERROR "${SVF_LIB} or ${SVF_HEADER} not exists")
-    endif()
-    include_directories(${SVF_HEADER})
+include_directories(${SVF_HEADER})
 
 
 
