--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,5 @@ before_script:
 script:
   - export SVF_DIR=$PWD/node_modules/SVF/SVF-$TRAVIS_OS_NAME
   - export LLVM_DIR=$PWD/node_modules/SVF/llvm-10.0.0.obj
-  - cmake -DSVF_DIR=$SVF_DIR
+  - cmake 
   - make
