--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,10 +34,10 @@ else()
     if(EXISTS "${SVF_DIR}")
     else()
     message(FATAL_ERROR "\
-    endif
 WARNING: The SVF_DIR var was not set (required for an out-of-source build)!\n\
 Please set this to environment variable to point to the SVF_DIR directory or set this variable to cmake configuration\n
 (e.g. on linux: export SVF_DIR=/path/to/SVF/dir) \n or \n \n(make the project via: cmake -DSVF_DIR=your_path_to_SVF) ")
+    endif()
 endif()
 
 if (UNIX AND NOT APPLE)
