--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ before_script:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then sudo apt-get install cmake gcc g++; fi
 
 script:
-  - source $TRAVIS_BUILD_DIR/node_modules/SVF/env.sh
-  - cd $TRAVIS_BUILD_DIR
+  - source $TRAVIS_BUILD_DIR/env.sh
   - cmake .
   - make
