--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,12 +40,12 @@ Please set this to environment variable to point to the SVF_DIR directory or set
     endif()
 endif()
 
-if (UNIX AND NOT APPLE)
-    MESSAGE (STATUS "building SVF on Ubuntu")
-    set(SVF_LIB "${SVF_DIR}/Release-build/lib/libSvf.a")
-    set(LLVMCudd "${SVF_DIR}/Release-build/lib/CUDD/libCudd.a")
-elseif (APPLE)
-    MESSAGE (STATUS "building SVF on Mac")
+if(CMAKE_BUILD_TYPE MATCHES "Debug")
+    MESSAGE (STATUS "building SVF in debug mode")
+    set(SVF_LIB "${SVF_DIR}/Debug-build/lib/libSvf.a")
+    set(LLVMCudd "${SVF_DIR}/Debug-build/lib/CUDD/libCudd.a")
+else()
+    MESSAGE (STATUS "building SVF in release mode")
     set(SVF_LIB "${SVF_DIR}/Release-build/lib/libSvf.a")
     set(LLVMCudd "${SVF_DIR}/Release-build/lib/CUDD/libCudd.a")
 endif()
