--- a/.github/workflows/svf-example-build.yml
+++ b/.github/workflows/svf-example-build.yml
@@ -27,5 +27,7 @@ jobs:
          source $GITHUB_WORKSPACE/env.sh
          cmake .
          make 
-         curl -o $GITHUB_WORKSPACE/curl.bc 'https://github.com/SVF-tools/Test-Suite/blob/master/test_cases_bc/crux-bc/curl.bc'
-         $GITHUB_WORKSPACE/bin/svf-ex -pt-type=cbv $GITHUB_WORKSPACE/curl.bc
+         git clone https://github.com/SVF-tools/Test-Suite.git $GITHUB_WORKSPACE/Test-Suite
+         ls $GITHUB_WORKSPACE/Test-Suite/test_cases_bc/crux-bc/curl.bc
+         echo $GITHUB_WORKSPACE/bin/svf-ex -pt-type=cbv $GITHUB_WORKSPACE/Test-Suite/test_cases_bc/crux-bc/curl.bc
+         $GITHUB_WORKSPACE/bin/svf-ex -pt-type=cbv $GITHUB_WORKSPACE/Test-Suite/test_cases_bc/crux-bc/curl.bc
