--- a/.github/workflows/svf-example-build.yml
+++ b/.github/workflows/svf-example-build.yml
@@ -1,7 +1,8 @@
 name: svf-example
 
 # Triggers the workflow on push or pull request events
-on: [push, pull_request]
+on: 
+  [ push, pull_request, repository_dispatch]
 
 jobs:
   build:
