--- a/svf-example-py/.github/workflows/svf-example-build.yml
+++ b/svf-example-py/.github/workflows/svf-example-build.yml
@@ -31,7 +31,7 @@ jobs:
           sudo apt-get update
           sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
           sudo apt-get update
-          sudo apt-get install cmake gcc g++ nodejs doxygen graphviz
+          sudo apt-get install cmake gcc g++ nodejs doxygen graphviz python3
           
       # install llvm and svf
       - name: env-setup
@@ -44,3 +44,6 @@ jobs:
          source $GITHUB_WORKSPACE/env.sh
          cmake .
          make 
+         clang -S -c -g -fno-discard-value-names -emit-llvm example.c -o example.ll
+         python3 ./src/svf-ex.py example.ll
+
