--- a/svf-example-py/CMakeLists.txt
+++ b/svf-example-py/CMakeLists.txt
@@ -43,19 +43,17 @@ endif()
 if(CMAKE_BUILD_TYPE MATCHES "Debug")
     MESSAGE (STATUS "building SVF in debug mode")
     if (EXISTS "${SVF_DIR}/Debug-build")
-        set(SVF_BIN "${SVF_DIR}/Debug-build")
+        set(SVF_LIB "${SVF_DIR}/Debug-build/lib/libSvf.a")
     else()
-        set(SVF_BIN "${SVF_DIR}/Release-build")
+        set(SVF_LIB "${SVF_DIR}/Release-build/lib/libSvf.a")
     endif()
 else()
     MESSAGE (STATUS "building SVF in release mode")
-    set(SVF_BIN "${SVF_DIR}/Release-build")
+    set(SVF_LIB "${SVF_DIR}/Release-build/lib/libSvf.a")
+
 endif()
 set(SVF_HEADER "${SVF_DIR}/include")
-set(SVF_LIB "${SVF_BIN}/lib/libSvf.a")
-set(SVF_BIN_HEADER "${SVF_BIN}/include")
-include_directories(${SVF_HEADER}
-                    ${SVF_BIN_HEADER})
+include_directories(${SVF_HEADER})
 
 #set z3 env
 if (DEFINED Z3_DIR)
@@ -92,4 +90,5 @@ else()
     LINK_DIRECTORIES(${Z3_DIR}/bin)
 endif()
 
-add_subdirectory(src)
+add_subdirectory(src/svfModule)
+add_subdirectory(src/svfLLVMUtil)
