Updated build system; use legacy import system when SVF CMake package cannot be found

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 # Define the actual runtime executable
-add_executable(svf-example svf-ex.cpp)
+add_llvm_executable(svf-example svf-ex.cpp)
 target_link_libraries(svf-example PUBLIC ${llvm_libs})
 target_link_libraries(svf-example PUBLIC z3 SvfCore SvfLLVM)
