--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(svf-example svf-ex.cpp)
-target_link_libraries(svf-example PUBLIC ${llvm_libs} SvfCore SvfLLVM z3)
+target_link_libraries(svf-example ${llvm_libs} SvfLLVM SvfCore)
