--- a/.github/workflows/svf-example-build.yml
+++ b/.github/workflows/svf-example-build.yml
@@ -6,25 +6,27 @@ on: [push, pull_request]
 jobs:
   build:
     runs-on: ${{ matrix.os }}
+    env:
+      XCODE_VERSION: '15.3.0'
     strategy:
       matrix:
         os: [ubuntu-20.04, macos-latest]
     steps:
       # checkout the repo
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: 18
           
       # setup the environment 
       - name: mac-setup
         if: runner.os == 'macOS'
         uses: maxim-lobanov/setup-xcode@v1
         with:
-          xcode-version: 14.2.0
+          xcode-version: ${{ env.XCODE_VERSION }}
       - name: mac-setup-workaround
         if: runner.os == 'macOS'
-        run: ln -sfn /Applications/Xcode_14.2.0.app /Applications/Xcode.app
+        run: ln -sfn /Applications/Xcode_${{ env.XCODE_VERSION }}.app /Applications/Xcode.app
       - name: ubuntu-setup
         if: runner.os == 'Linux'
         run: |
