--- a/.github/workflows/svf-example-build.yml
+++ b/.github/workflows/svf-example-build.yml
@@ -10,7 +10,7 @@ jobs:
       XCODE_VERSION: '15.3.0'
     strategy:
       matrix:
-        os: [ubuntu-20.04, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     steps:
       # checkout the repo
       - uses: actions/checkout@v2
